fix: menu now properly aligned to the left

--- a/poemfrontend/src/App.css
+++ b/poemfrontend/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   display: flex;
   min-height: 100vh;
-  align-items: center;
+  text-align: center;
   justify-content: center;
   color:  white;
   background: linear-gradient(#1eece8, #9198e5);
